--- a/css_includes/global_z.css
+++ b/css_includes/global_z.css
@@ -3,6 +3,7 @@ body {
     font-family: Verdana, Geneva, sans-serif;
     font-size: 30 px;
     background-color: #d6d6d6;
-    margin-left: 5em;
-    margin-top: 10em;
+    margin-left: auto;
+    margin-top: 5em;
+    border: 1px
 }
