--- a/css_includes/Message.css
+++ b/css_includes/Message.css
@@ -1,9 +1,22 @@
 .message {
     font-size: 20px;
     width: 40em;
-    color: white;
+    color: black;
+    margin: auto;
 }
 
-.continue-link { text-decoration: none; border: 2px solid #3385ff ; border-radius: 10px}
-.continue-link:hover { background-color: #4d94ff}
+.continue-link { 
+    padding: 1em; background: #C0C0C0;
+    background: linear-gradient(to bottom, #C0C0C0 0%, #B1B1B1 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #C0C0C0), color-stop(100%, #B1B1B1));
+    background: -webkit-linear-gradient(top, #C0C0C0 0%, #B1B1B1 100%);
+    background: -moz-linear-gradient(top, #C0C0C0 0%, #B1B1B1 100%);
+    background: -o-linear-gradient(top, #C0C0C0 0%, #B1B1B1 100%);
+    background: -ms-linear-gradient(top, #C0C0C0 0%, #B1B1B1 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#C0C0C0', endColorstr='#B1B1B1', GradientType=0);
+    border: 1px solid #A2A2A2;
+    box-shadow: inset 0 1px 0 #CFCFCF;
+    -webkit-box-shadow: inset 0 1px 0 #CFCFCF;
+    -moz-box-shadow: inset 0 1px 0 #CFCFCF;}
+.continue-link:hover { height:10%; weight: 10%}
 .continue-link:visited { color: #4d94ff; }
