--- a/css_includes/Message.css
+++ b/css_includes/Message.css
@@ -6,7 +6,7 @@
 }
 
 .continue-link { 
-    padding: 1em; background: #C0C0C0;
+    margin: 5px; padding: 7px; background: #C0C0C0;
     background: linear-gradient(to bottom, #C0C0C0 0%, #B1B1B1 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #C0C0C0), color-stop(100%, #B1B1B1));
     background: -webkit-linear-gradient(top, #C0C0C0 0%, #B1B1B1 100%);
@@ -18,5 +18,5 @@
     box-shadow: inset 0 1px 0 #CFCFCF;
     -webkit-box-shadow: inset 0 1px 0 #CFCFCF;
     -moz-box-shadow: inset 0 1px 0 #CFCFCF;}
-.continue-link:hover { height:10%; weight: 10%}
-.continue-link:visited { color: #4d94ff; }
+.continue-link:hover { border: 5px}
+.continue-link:visited { color: black; }
