--- a/css_includes/global_z.css
+++ b/css_includes/global_z.css
@@ -1,9 +1,9 @@
 body {
     color: black;
     font-family: Verdana, Geneva, sans-serif;
-    font-size: 30 px;
+    font-size: 30px;
     background-color: #d6d6d6;
     margin-left: auto;
-    margin-top: 5em;
+    margin-top: auto;
     border: 1px
 }
