--- a/css_includes/Message.css
+++ b/css_includes/Message.css
@@ -1,3 +1,9 @@
+.html {
+    text-align: center;
+    margin-bottom: auto;
+    margin-left: auto;
+}
+
 .message {
     font-size: 20px;
     width: 40em;
