--- a/css_includes/Scale.css
+++ b/css_includes/Scale.css
@@ -25,8 +25,8 @@
 }
 
 .button {
-    width: 7em;
-    height: 1.5em;
+    width: 80px;
+    height: 30px;
     background: #26396B;
     color: white;
     font-family: sans-serif;
